tests/spec/fail/error_context_runtime.aja
if 1:
    print("bad condition")
